!meta!
title: Home
!meta!

[img, style: "width:50%", src: "images/BO.jpeg", alt: "picture of my cat" |]

[a, href: "writings/writing.html"|my writing]


[h3|Hello there ] 
 
[p|Hi :3 ]
[p|Welcome to my site. This is somewhat of an experimental space for me where I can share my [a, href: "writing.html"|writing] page, as well as various projects and cool bits and bobs that I enjoy exploring. This place is inspired by [a, href: "https:/  mineralexistence.com"|Mineral Existence] 
[a, href: "https://merveilles.town/@flbr"|efelbar]]

[a, href: "https://questionablecontent.net"|cute comic]

[p|As I say in a few other areas, I am very new to this sort of thing so please know this site may be a tad janky :3]